--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        pkg: [aria2, axel, base16, base64, bash, bat, bison, bc, bsdtar, bzip2, b3sum, cargo-c, cmake, coreutils, cppcheck, ctop, curl, curlie, darkhttpd, dua, duf, dufs, dust, diffutils, dog, dos2unix, easyutils, ed, exa, fd, figlet, file, findutils, flex, fzf, gawk, gettext-tools, gh, gindent, git, glib-tools, glow, gm4, gmake, gn, gnupg, go-md2man, gogs, golang, gotop, gotty, gperf, grep, grpc-plugins, gsed, gtar, gzip, hugo, jj, jq, lazygit, libxml2-utils, lolcat, lsd, lz4, lzip, mediainfo, mosh, mpg123, nasm, ninja, nushell, openssl, patch, patchelf, pigz, p7zip, pkg-config, pkgconf, pngquant, proot, putty, qpdf, qrencode, re2c, ripgrep, rsync, rtmpdump, sqlite3, starship, strace, svn-lite, swig, sysinfo, tcpdump, tealdeer, tig, tmux, tree, uctags, unrar, unzip, uppm, util-linux, volta, wget, xmake, xsltproc, xxd, xz, yasm, youtubedr, yq, zip, zopfli, zstd, zoxide]
+        pkg: [aria2, axel, base16, base64, bash, bison, bc, bsdtar, bzip2, cmake, coreutils, cppcheck, ctop, curl, curlie, darkhttpd, duf, diffutils, dog, dos2unix, easyutils, ed, figlet, file, findutils, flex, fzf, gawk, gettext-tools, gh, gindent, git, glib-tools, glow, gm4, gmake, gn, gnupg, go-md2man, gogs, golang, gotop, gotty, gperf, grep, grpc-plugins, gsed, gtar, gzip, hugo, jj, jq, lazygit, libxml2-utils, lolcat, lsd, lz4, lzip, mediainfo, mosh, mpg123, nasm, ninja, openssl, patch, patchelf, pigz, p7zip, pkg-config, pkgconf, proot, putty, qpdf, qrencode, re2c, rsync, rtmpdump, sqlite3, strace, svn-lite, swig, sysinfo, tcpdump, tig, tmux, tree, uctags, unrar, unzip, uppm, util-linux, wget, xmake, xsltproc, xxd, xz, yasm, youtubedr, yq, zip, zopfli, zstd]
 
     runs-on: ubuntu-latest
 
@@ -37,7 +37,7 @@ jobs:
           run ./ppkg setup --syspm
           run ./ppkg update
           run ./ppkg install ${{ matrix.pkg }} --static
-          run ./ppkg bundle  ${{ matrix.pkg }} --exclude include/ --exclude lib/
+          run ./ppkg bundle  ${{ matrix.pkg }} .tar.xz --exclude include/ --exclude lib/
 
           run cp ~/.ppkg/installed/linux-musl-loongarch64/${{ matrix.pkg }}/.ppkg/RECEIPT.yml .
           EOF
