--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,7 +66,7 @@ jobs:
         with:
           name: ${{ matrix.pkg }}
           path: |
-            '*.tar.xz'
+            *.tar.xz
             ${{ matrix.pkg }}.yml
 
 
